--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -142,7 +142,7 @@
 <!-- Modal for Delete Story Group -->
 <ng-template #archiveGroupModal>
 
-    <div class="modal-header">
+    <div class="modal-header del-con">
         <h4 class="modal-title">Confirm</h4>
         <button type="button" class="close" (click)="bsModalRef.hide()" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -161,7 +161,7 @@
 <!-- Modal for Delete Story Group -->
 <ng-template #deleteGroupModal>
 
-    <div class="modal-header">
+    <div class="modal-header  del-con">
         <h4 class="modal-title">Confirm</h4>
         <button type="button" class="close" (click)="bsModalRef.hide()" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -179,7 +179,7 @@
 
 <!-- Modal for Include Users -->
 <ng-template #includeUsers>
-    <div class="modal-header">
+    <div class="modal-header path-list">
         <h4 class="modal-title pull-left">INCLUDE USERS FOR PATHWAY GROUP(S)</h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
