--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.scss
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.scss
@@ -51,3 +51,10 @@
     min-height: 35px;
     min-width: 80px;
 }
+.path-list{
+    span{line-height: 0;}
+}
+.del-con{
+    .close{margin: 0; padding: 0;}
+}
+
