Updated code b4 pulling

--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -13,7 +13,10 @@
         <div class="buton-holder">
 
             <button type="submit" [disabled]="storyBoardForm.invalid" class="create-user btn btn-primary float-right set-margin-left10" (click)="submitForm()">Save</button>
-            <a class="btn btn-secondary create-user float-right set-margin" routerLink="/bid-academy/documents-list">Back</a>
+            <a class="btn btn-secondary create-user float-right set-margin set-margin-left10" routerLink="/bid-academy/documents-list">Back</a>
+            <a class="btn-primary btn create-user float-right set-margin" routerLink="/bid-academy/create-story-board">
+                <i class="fas fa-plus-square"></i> Add New Document</a>
+
         </div>
 
     </div>
