--- a/src/app/pages/bid-academy/components/story-board/story-board.component.scss
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.scss
@@ -94,8 +94,7 @@ h3{flex: 0 0 50%; margin: 0;}
 }
 
 .tx-editor{margin:0 0 20px 0;}
-
-
+.ck-blurred.ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline{min-height: 190px !important;}
 
 
 
